[package]
name = "background-cycler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
json = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
toml = "0.5.9"
